Fixed embed sizeing on mobile

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -92,6 +92,11 @@ $mobile-width: 1024px;
     }
   }
 
+  .embed > * {
+    margin: 0;
+    width: 98vw;
+  }
+
   .info, .actions {
     height: 28px;
     padding-top: 0;
